feat: docker (app)

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,7 @@ POSTGRES_PORT=5432
 POSTGRES_DB=etl
 POSTGRES_USER=etl
 POSTGRES_PASSWORD=my_weak_password
+#############################################
+# Telegram environment variables
+#############################################
+TG_BOT_TOKEN=_your_telegram_token_
